cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(cmake-cookbook LANGUAGES C CXX)

# chapter-01
add_subdirectory(chapter-01/recipe-01/c-example)
add_subdirectory(chapter-01/recipe-01/cxx-example)
add_subdirectory(chapter-01/recipe-02/c-example)
add_subdirectory(chapter-01/recipe-02/cxx-example)
add_subdirectory(chapter-01/recipe-03/cxx-example)
add_subdirectory(chapter-01/recipe-03/cxx-objlib-example)
add_subdirectory(chapter-01/recipe-04/cxx-example)
add_subdirectory(chapter-01/recipe-05/cxx-example)
add_subdirectory(chapter-01/recipe-06/example)
add_subdirectory(chapter-01/recipe-07/example)
add_subdirectory(chapter-01/recipe-08/cxx-example)
add_subdirectory(chapter-01/recipe-09/cxx-example)
